# hackernews-backend

./: .flake8  .isort.cfg  .pre-commit-config.yaml  Insomnia_2020-04-19.json  README.md  insomnia_collection.json  manage.py  pyproject.toml
hackernews_backend/: schema.py  settings.py  urls.py  wsgi.py
hn_users/: admin.py  apps.py  models.py  schema.py
hn_users/migrations/: 0001_initial.py
links/: admin.py  models.py  schema.py  schema_relay.py
links/management/commands/: seed_data.py
links/migrations/: 0001_initial.py  0002_link_posted_by.py  0003_auto_20200419_1601.py  0004_auto_20200419_1607.py  0005_auto_20200419_1612.py
