[tool.poetry]
name = "reimagined-broccoli"
version = "0.1.0"
description = ""
authors = ["Abhishek Juneja <abhishek.juneja145@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bpython = "^0.19"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
