[tool.poetry]
name = "reimagined-broccoli"
version = "0.1.0"
description = ""
authors = ["Abhishek Juneja <abhishek.juneja145@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bpython = "^0.19"
django = "2.2"
graphene-django = "2.2.0"
django-filter = "2.0.0"
django-graphql-jwt = "0.1.5"
pre-commit = "^2.2.0"
django-extensions = "^2.2.9"
Werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
ipython = "^7.13.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
